# Waffle-Engine

./: .gitignore  LICENSE  README.md
waffle_engine/: Cargo.toml  editor_layout.ron
waffle_engine/assets/: Untitled.glb
waffle_engine/src/: main.rs
waffle_engine/src/core/: components.rs  config.rs  events.rs  mod.rs  resources.rs  systems.rs
waffle_engine/src/editor/: mod.rs  panels.rs  theme.rs  ui.rs  windows.rs
waffle_engine/src/rendering/: atmosphere.rs  camera.rs  fog.rs  lighting.rs  materials.rs  mod.rs  post_processing.rs  scene.rs  shadows.rs
